--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,108 @@
+apturl==0.5.2
+arrow==1.1.0
+asgiref==3.3.4
+Babel==2.6.0
 backports.entry-points-selectable==1.1.0
-backports.functools-lru-cache==1.5
-beautifulsoup4==4.8.2
-chardet==3.0.4
-configparser==4.0.2
-contextlib2==0.6.0.post1
+bcrypt==3.1.7
+binaryornot==0.4.4
+blinker==1.4
+boto3==1.17.78
+botocore==1.20.78
+Brlapi==0.7.0
+certifi==2020.12.5
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.3
+command-not-found==0.3
+cookiecutter==1.7.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
 distlib==0.3.2
-Django==1.11.29
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==3.2
+django-ckeditor==6.0.0
+django-debug-toolbar==3.2.1
+django-js-asset==1.2.2
+django-storages==1.11.1
+django-tailwind==2.0.1
+django-webp==2.0.0
+djangorestframework==3.12.4
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
 filelock==3.0.12
-html5lib==1.0.1
-importlib-metadata==2.1.1
-importlib-resources==3.3.1
-lxml==4.5.0
-numpy==1.16.5
-pathlib2==2.3.6
-platformdirs==2.0.2
+future==0.18.2
+gunicorn==20.1.0
+httpagentparser==1.9.1
+httplib2==0.14.0
+idna==2.10
+Jinja2==3.0.1
+jinja2-time==0.2.0
+jmespath==0.10.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==2.0.1
+monotonic==1.5
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+openshot-qt==2.4.3
+paramiko==2.6.0
+pbr==5.6.0
+pexpect==4.6.0
+Pillow==8.2.0
+platformdirs==2.3.0
+poyo==0.5.0
+protobuf==3.6.1
+psutil==5.5.1
+psycopg2-binary==2.8.6
+pycairo==1.16.2
+pycups==1.9.73
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+PyQt5==5.14.1
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.6
+python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
+python-slugify==5.0.2
+python-xlib==0.23
 pytz==2021.1
-scandir==1.10.0
-singledispatch==3.7.0
-six==1.14.0
-soupsieve==1.9.5
-typing==3.10.0.0
+pyxdg==0.26
+PyYAML==5.3.1
+pyzmq==18.1.1
+reportlab==3.5.34
+requests==2.25.1
+requests-unixsocket==0.2.0
+s3transfer==0.4.2
+safeeyes==2.0.6
+SecretStorage==2.3.1
+sentry-sdk==1.3.0
+simplejson==3.16.0
+sip==4.19.21
+six==1.16.0
+sqlparse==0.4.1
+systemd-python==234
+testresources==2.0.1
+text-unidecode==1.3
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.26.4
+usb-creator==0.3.7
 virtualenv==20.7.2
-webencodings==0.5.1
-zipp==1.2.0
+wadllib==1.3.3
+xkit==0.0.0
